bin_PROGRAMS = pstpfinder @EXTRAS@
EXTRA_PROGRAMS = marching_cubes

pstpfinder_SOURCES = pstpfinder.cpp MainWindow.cpp NewAnalysis.cpp Gromacs.cpp Pittpi.cpp Results.cpp utils.cpp ColorsChooser.cpp 

marching_cubes_SOURCES = marching_cubes.cpp Gromacs.cpp utils.cpp SplittedSpace.cpp Viewer3D.cpp MarchingCubes.cpp
marching_cubes_LDADD = -lGL -lGLU -lglfw
